--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
     sdk: flutter
   glaze_nav_bar: ^1.2.1
   go_router: ^17.0.1
+  dropdown_button2: ^2.3.9
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
 
